--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "auto-start": "nodemon --exec \"npm start\" --ignore public/js"
   },
   "dependencies": {
+    "apollo-server-express": "^1.3.2",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
+    "graphql-subscriptions": "^0.5.6",
     "jade": "~1.11.0",
     "moment": "^2.20.1",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
     "sequelize": "^4.28.6",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.4",
+    "subscriptions-transport-ws": "^0.9.5"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
